--- a/src/app/shared/organisms/order-detail/order-detail.scss
+++ b/src/app/shared/organisms/order-detail/order-detail.scss
@@ -7,16 +7,32 @@
   max-width: 800px;
   margin: 0 auto;
   padding: 1rem;
-  padding-top: 160px;
+  //padding-top: 160px;
 
   @include m.tablet-up {
     padding: 2rem;
-    padding-top: 170px;
+    //padding-top: 170px;
   }
    @include m.desktop-up {
     padding: 2rem;
-    padding-top: 170px;
+  // padding-top: 170px;
      max-width: 1000px;
+  }
+
+    &__title1 {
+    font-size: 2rem;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: #728F70;
+    line-height: 1.2;
+
+    @include m.tablet-up {
+      font-size: 2.75rem;
+    }
+
+    @include m.desktop-up {
+      font-size: 3.25rem;
+    }
   }
 
   &__loading,
